# EXPOsan

./: .gitignore  20.14gL_pH_40d_AD.xlsx  AGENTS.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  conftest.py  metroASM2d.py  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.py
.github/ISSUE_TEMPLATE/: bugs--errors--warnings.md
.github/workflows/: build-dev.yml  build-disinfection.yml  build-latest.yml  build-main.yml  build-stable.yml  build-upstream.yml  build.yml
Simulation Results/: 041224_sol_40d_BDF_AD_For Shell Meeting and Symposium.xlsx  041824_20.14gL_pH_40d_AD_R4G20.xlsx  041824_pH_levels_over_time_R4G20.xlsx  20.14_pH4.3_40d_AD.xlsx  20.14gL_pH4.3_100d_AD.xlsx  20.14gL_pH4.3_40d_AD.xlsx  20.14gL_pH4.3_40d_AD_fraction_retain=0.95.xlsx  20.14gL_pH4.3_40d_AD_fraction_retain=1.0.xlsx  20.14gL_pH_100d_AD.xlsx  20.14gL_pH_40d_AD.xlsx  ED_vfa_simulation_results.xlsx  [After revising Initial Condition]20.14gL_pH_40d_AD.xlsx  [Rev2]20.14gL_pH_40d_AD.xlsx  pH_levels_over_time.xlsx  sol_20.14_4.3_40d_AD.xlsx  sol_20d_BDF_AD.xlsx  sol_40d_BDF_AD.xlsx
bwaise/: README.rst
exposan/: GitHub - Shortcut.lnk  __init__.py  utils.py
exposan/Eco_san/: __init__.py  _cmps.py  _cmps_Ecosan.py  analyses.py  country_specific.py  country_specific_C  models.py  sensitivity.py  systems.py
exposan/HTL/: _components.py  system.py
exposan/Industrial_decarbonization/: Beijing_QSDsan_Columbia.py  Beijing_WRRF.py  NSS_cities_centralized_WRRFs.pptx  README.md  analysis.py
exposan/OmniProcessor_BiogenicRefinery/: models.py  sensitivity_B.py  systems.py
exposan/VFA/: _components.py  _lca.py  _sanunits.py  _sanunits_copy.py  systems.py
exposan/VR_toilet/: __init__.py  _components.py  _sanunits.py  analysis.py  models.py  systems.py
exposan/activated_sludge/: __init__.py  system.py
exposan/adm/: ADM1_vfa_UASB.py  README.rst  __init__.py  analyses.py  model.py  system.py  test_adm1p_interfaces.py
exposan/adm_laet/: 20.14gL_pH_40d_AD.xlsx  ADM1_vfa_UASB.py  model.py  pH_levels_over_time.xlsx
exposan/asm/: README.rst  __init__.py  systems.py  systems_watertap.py  validation.py
exposan/biobinder/: README.rst  __init__.py  _components.py  _process_settings.py  _tea.py  _units.py  bb_systems.py  biobinder_environment.yml  biocrude.py  city_coordinates.csv  fungal.py  sample.py  (+10 more)
legacy_files/: appveyor.yml
tests/: __init__.py  conftest.py  run_readmes.py  test_adm.py  test_asm.py  test_biobinder.py  test_biogenic_refinery.py  test_bsm1.py  test_bsm1_.py  test_bsm2.py  test_bwaise.py  test_bwaise_.py  test_cas.py  test_cas_.py  test_eco_san.py  test_g2rt.py  test_hap.py  test_htl.py  test_htl_data.py  test_interface.py  test_metab.py  test_module_conventions.py  test_pm2.py  test_pou_disinfection.py  test_reclaimer.py  test_saf.py  test_utils.py  test_werf.py
(+6555 files in other folders)
